test/files/neg/private-implicit-class.check
private-implicit-class.scala:6: error: method BarExtender in class ImplicitsPrivate cannot be accessed in ImplicitsPrivate
  override implicit def BarExtender(bar: Int) = super.BarExtender(bar) // error
                                                      ^
one error found